# universal-cpp-devcontainer

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  parse-non-root.sh  symlink-container-mounts.sh
advanced_example/: CMakeLists.txt
advanced_example/exe/: CMakeLists.txt
advanced_example/exe/src/: array_to_string.hpp  trackers.hpp
advanced_example/lib/: CMakeLists.txt
advanced_example/lib/include/: sorts.hpp
advanced_example/test/: CMakeLists.txt
advanced_example/test/src/: main.cpp
basic_example/: CMakeLists.txt
basic_example/include/: pi.hpp
basic_example/src/: main.cpp  vector_to_string.cpp
example/include/: vector_to_string.hpp
example/src/: main.cpp
intermediate_example/: CMakeLists.txt
intermediate_example/exe/: CMakeLists.txt
intermediate_example/exe/src/: trackers.cpp
intermediate_example/lib/: CMakeLists.txt
scripts/container/: redirect_to_vcpkg.sh
scripts/host/: parse_non_root.sh
